# TraillearnTavily

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  scraper.py  search_handler.py  searxng_client.py  server.py  test_page.py
deploy/: Caddyfile  nginx.conf.example
docs/operations/: deploiement.md  prompt-integration-traillearn.md
docs/superpowers/plans/: 2026-06-22-traillearn-search-local-tavily.md
docs/superpowers/specs/: 2026-06-22-traillearn-search-local-tavily-design.md
searxng/: settings.yml
tests/: test_config.py  test_scraper.py  test_search_handler.py  test_searxng_client.py  test_server.py
