[project]
name = "traillearn-search"
version = "0.1.0"
description = "Service de recherche web local compatible Tavily (SearXNG + scraping)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "trafilatura>=1.8",
    "readability-lxml>=0.8.1",
    "lxml>=5.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
